welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: '=' expected but identifier found.
def positionFinale() Boolean{
                     ^SnakeBuggle:15: error: illegal start of simple expression
def serpent(){
^